--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.9.25",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "stripe": "^8.81.0",
     "validator": "^13.1.1"
   },
   "devDependencies": {
